tests/errors/syn_while1.java
public class syn_while1 {
public static void main(String[] args){
( true ) {
 
}
}
}